--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HangmanApp</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="errorUsernameOrPassword">Incorrect username or password</string>
 </resources>
