--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="errorUsernameOrPassword">Incorrect username or password</string>
+    <string name="somethingWentWrong">Something went wrong</string>
 </resources>
