--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="password">Password</string>
     <string name="errorUsernameOrPassword">Incorrect username or password</string>
     <string name="somethingWentWrong">Something went wrong</string>
+    <string name="preferences_config">config</string>
+    <string name="prefLanguage">language</string>
+    <string name="prefMusic">music</string>
+    <string name="prefSound">sound</string>
 </resources>
