--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HangmanApp</string>
+    <string name="app_name">AbductMania</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="errorUsernameOrPassword">Incorrect username or password</string>
